syntax = "proto3";

option csharp_namespace = "TrackYourTripGRPCApi.Protos";

package auth;

service Auth{
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string groupName = 4;
  bool newGroup = 5;
}

message RegisterResponse {
  bool status = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool status = 1;
}
